<resources>
    <string name="app_name">TestingAndroid</string>
    <string name="login">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="password_length_too_small">The provided password is too short.</string>
    <string name="password_all_spaces">The provided password is invalid</string>
    <string name="login_success">Login success.</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
